# pdf-edge-trimmer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: file-size-and-quality.md
scripts/: build_macos_app.sh
src/pdf_edge_trimmer/: __init__.py  app.py
tests/: test_pdf_edge_trimmer.py
