[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-edge-trimmer"
version = "0.1.0"
description = "Local browser app and CLI for trimming PDF page edges."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyMuPDF>=1.26",
  "Pillow>=10",
]

[project.scripts]
pdf-edge-trimmer = "pdf_edge_trimmer.app:main"

[tool.setuptools.packages.find]
where = ["src"]
